--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ section:after{
 
 
 footer {
-  background-color: rgb(148, 140, 140);
+  background-color: rgb(109, 68, 68);
   padding: 10px;
   text-align: center;
   color: white;
@@ -128,8 +128,11 @@ header .header1 .right_header .taikhoan p{
 </style>
 </head>
 <body>
+    
    <header>
+
    	<div class="header1">
+        <a style="font-family: 'Courier New', Courier, monospace ;" >SHOP MEN</a>
    		<div class="logo">
    			<img  style="" src="" alt="">
    		</div>
@@ -151,8 +154,6 @@ header .header1 .right_header .taikhoan p{
    			</div>
    		</div>
    	</div>
-    <!-- <i  style="margin-right: 100px;">SHOP MEN</i>
-     -->
    	 <ul>
    		<li>
    			<a href="">Trang Chủ</a>
@@ -205,7 +206,7 @@ header .header1 .right_header .taikhoan p{
         <h3><a href="#">Sản Phẩm Mới</a></h3>
    		</nav>
 	   	<article>
-	   		<h3 style="text-align: center;font-size: 30px;color:gray;">Tổng Thể</h3>
+	   		<h3 style="text-align: center;font-size: 30px;color:gray;">GIỚI THIỆU CỬA HÀNG</h3>
 	   		<div class="content1">
 		   		<img src="https://4menshop.com/images/thumbs/2020/02/ao-so-mi-co-lanh-tu-mau-xam-asm1311_2_small-15089-t.jpg" style="float: left; width:200px; height: 200px;">
 		   		<p class="pa" style="font-family:courier;">
@@ -226,8 +227,11 @@ header .header1 .right_header .taikhoan p{
 		    	 </p>
 	   		</div>
         <div class="content1">
-          <img style="width: 200px;height: 200px;" src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSVJ6be1QhiwAS2uLkBqhyW2z0CXlT-XOfq5A5LhiArz_7AHivO&usqp=CAU">
-          <p class="pa" style="font-family:courier;">Đây là set đồ không thể thiếu trong tủ đồ của bất kì bạn nam nào bởi chúng không bao giờ lỗi mốt. Khi mặc bộ đồ này bạn nên sử dụng thêm một chiếc thắt lưng đi kèm để tạo sự lịch lãm nhé! Trong khi áo sơ mi có rất nhiều màu để bạn lựa chọn thay đổi thì quần tây/quần kaki có một vài màu sắc cơ bản như: đen, trắng, cà phê sữa...tùy theo sở thích riêng của bạn.</p>
+            <iframe width="200" height="200" src="https://www.youtube.com/embed/WZi1dNJkcDs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <p class="pa" style="font-family:courier;">
+                Video giới thiệu trang web bán hàng!  Bạn có thể tìm thấy những bộ trang phục mình muốn từ những bộ đồ ở nhà thật thoải mái hay tự tin trong những bộ trang phục công sở phù hợp. Những trải nghiệm mới chỉ có ở trang mua sắm hàng hiệu trực tuyến THỜI TRANG NAM
+            
+            </p>
         </div>
        <div class="gallery">
          <a target="_blank" href="img_5terre.jpg">
@@ -297,7 +301,7 @@ header .header1 .right_header .taikhoan p{
      </div>
      <div class="gallery">
       <a target="_blank" href="img_lights.jpg">
-       <img src="https://manzano.vn/giay-dang-cap-manzano-nam-tinh-lich-lam-m66656-p968251.html" alt="Northern Lights" width="500" height="200">
+       <img src="https://encrypted-tbn2.gstatic.com/shopping?q=tbn:ANd9GcQ13lR2yBEIlOeMJQ-Q6LrfYu8suPKTwWaT8gmp5yQX7avBzILYhmd7idojgp40ias5uC1u89ywlw&usqp=CAc"" alt="Northern Lights" width="500" height="200">
      </a>
      <div class="desc">Giày tây đẹp<br>
                    1.550.000đ</div>
